objects/Dealer_Performance_Score_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Dealer Performance Score Custom Settings. This is used by the DealerPerformanceScoreUtility Apex class</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>For re-usability purposes, this field determines the Component the functionality is used.</description>
        <inlineHelpText>Component the setting is used</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>Dictates the order the criteria is displayed in the Dealer Score Performance page</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <description>Holds the value of the custom setting for Dealer Criteria Name Display.</description>
        <inlineHelpText>Examples: Contact SLA, SFDC Timely Updates</inlineHelpText>
        <label>Field Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Contains the API Name of the Object to use for the Dealer Score Computation</description>
        <inlineHelpText>Example: Contact_SLA__c , SFDC_Timely_Updates__c</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Contains the field value of a Dealer Score criteria</description>
        <inlineHelpText>Example: For Dealer Tier - field values are Authorized, Master</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contains the Maximum Score or Points that the Dealer can get in the criteria.</description>
        <label>Maximum Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealer Performance Score Setting</label>
</CustomObject>